@@ -4,10 +4,12 @@ package com.yahoo.vespa.model;
 import com.yahoo.config.model.api.PortInfo;
 import com.yahoo.config.model.api.ServiceInfo;
 import com.yahoo.config.model.deploy.DeployState;
-import com.yahoo.config.model.producer.AbstractConfigProducer;
+import com.yahoo.config.model.producer.AnyConfigProducer;
+import com.yahoo.config.model.producer.TreeConfigProducer;
 import com.yahoo.vespa.defaults.Defaults;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -26,7 +28,7 @@ import static com.yahoo.text.Lowercase.toLowerCase;
  *
  * @author gjoranv
  */
-public abstract class AbstractService extends AbstractConfigProducer<AbstractConfigProducer<?>> implements Service {
+public abstract class AbstractService extends TreeConfigProducer<AnyConfigProducer> implements Service {
 
     // The physical host this Service runs on.
     private HostResource hostResource = null;
@@ -77,13 +79,13 @@ public abstract class AbstractService extends AbstractConfigProducer<AbstractCon
 
     /**
      * Preferred constructor when building from XML. Use this if you are building
-     * in doBuild() in an AbstractConfigProducerBuilder.
+     * in doBuild() in an TreeConfigProducerBuilder.
      * build() will call initService() in that case, after setting hostalias and baseport.
      *
      * @param parent the parent config producer in the model tree
      * @param name   the name of this service
      */
-    public AbstractService(AbstractConfigProducer<?> parent, String name) {
+    public AbstractService(TreeConfigProducer<?> parent, String name) {
         super(parent, name);
         environmentVariables.put("VESPA_SILENCE_CORE_ON_OOM", true);
     }
@@ -410,11 +412,12 @@ public abstract class AbstractService extends AbstractConfigProducer<AbstractCon
 
     @Override
     public Map<String, Object> getEnvVars() {
-        return Map.copyOf(environmentVariables);
+        return Collections.unmodifiableMap(environmentVariables);
     }
 
     public String getEnvStringForTesting() {
-        return environmentVariables.entrySet().stream().map(e -> e.getKey() + '=' + toEnvValue(e.getValue())).collect(Collectors.joining(" "));
+        return environmentVariables.entrySet().stream().sorted(Map.Entry.comparingByKey())
+                .map(e -> e.getKey() + '=' + toEnvValue(e.getValue())).collect(Collectors.joining(" "));
     }
 
     /**
