@@ -1,7 +1,6 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.model.test;
 
-import com.google.common.collect.ImmutableList;
 import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.config.model.ConfigModelRegistry;
 import com.yahoo.config.model.NullConfigModelRegistry;
@@ -72,7 +71,7 @@ public class VespaModelTester {
     }
 
     /** Adds some nodes with resources 1, 3, 10 */
-    public Hosts addHosts(int count) { return addHosts(InMemoryProvisioner.defaultResources, count); }
+    public Hosts addHosts(int count) { return addHosts(InMemoryProvisioner.defaultHostResources, count); }
 
     public Hosts addHosts(NodeResources resources, int count) {
         return addHosts(Optional.of(new Flavor(resources)), resources, count);
@@ -90,7 +89,7 @@ public class VespaModelTester {
                                                      "-" + Math.round(resources.memoryGb()) +
                                                      "-" + Math.round(resources.diskGb()),
                                             count - i);
-            hosts.add(new Host(hostname, ImmutableList.of(), flavor));
+            hosts.add(new Host(hostname, List.of(), flavor));
         }
         this.hostsByResources.put(resources, hosts);
 
@@ -198,6 +197,7 @@ public class VespaModelTester {
                                                                       useMaxResources,
                                                                       alwaysReturnOneNode,
                                                                       false,
+                                                                      NodeResources.unspecified(),
                                                                       startIndexForClusters,
                                                                       retiredHostNames);
             provisioner.setEnvironment(zone.environment());
