@@ -4,7 +4,6 @@ package com.yahoo.vespa.hosted.controller;
 import com.yahoo.config.provision.TenantName;
 import com.yahoo.text.Text;
 import com.yahoo.transaction.Mutex;
-import com.yahoo.vespa.curator.Lock;
 import com.yahoo.vespa.hosted.controller.api.identifiers.TenantId;
 import com.yahoo.vespa.hosted.controller.application.SystemApplication;
 import com.yahoo.vespa.hosted.controller.concurrent.Once;
@@ -26,7 +25,6 @@ import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 /**
  * A singleton owned by the Controller which contains the methods and state for controlling tenants.
@@ -70,7 +68,7 @@ public class TenantController {
         return curator.readTenants().stream()
                 .filter(tenant -> tenant.type() != Tenant.Type.deleted || includeDeleted)
                 .sorted(Comparator.comparing(Tenant::name))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /** Locks a tenant for modification and applies the given action. */
@@ -157,6 +155,13 @@ public class TenantController {
 
             if (tenant.lastLoginInfo().equals(loginInfo)) return; // no change
             curator.writeTenant(LockedTenant.of(tenant, lock).with(loginInfo).get());
+        }
+    }
+
+    public void updateLastTenantRolesMaintained(TenantName tenantName, Instant lastMaintained) {
+        try (Mutex lock = lock(tenantName)) {
+            var tenant = require(tenantName);
+            curator.writeTenant(LockedTenant.of(tenant, lock).with(lastMaintained).get());
         }
     }
 
