@@ -6,49 +6,96 @@ import com.yahoo.container.jdisc.HttpRequest;
 import com.yahoo.container.jdisc.HttpResponse;
 import com.yahoo.tensor.Tensor;
 import com.yahoo.tensor.serialization.JsonFormat;
+import com.yahoo.text.JSON;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.Executors;
+import java.util.function.Predicate;
 
 import static org.junit.Assert.assertEquals;
+import static com.yahoo.slime.SlimeUtils.jsonToSlime;
 
 class HandlerTester {
 
     private final ModelsEvaluationHandler handler;
+
+    private static Predicate<String> nop() {
+        return s -> true;
+    }
+    private static Predicate<String> matchString(String expected) {
+        return s -> {
+            //System.out.println("Expected: " + expected);
+            //System.out.println("Actual:   " + s);
+            return expected.equals(s);
+        };
+    }
+    private static Predicate<String> matchJsonString(String expected) {
+        return s -> {
+            //System.out.println("Expected: " + expected);
+            //System.out.println("Actual:   " + s);
+            return JSON.canonical(expected).equals(JSON.canonical(s));
+        };
+    }
+    public static Predicate<String> matchJson(String... expectedJson) {
+        var jExp = String.join("\n", expectedJson).replaceAll("'", "\"");
+        var expected = jsonToSlime(jExp);
+        return s -> {
+            var got = jsonToSlime(s);
+            boolean result = got.equalTo(expected);
+            if (!result) {
+                System.err.println("got:");
+                System.err.println(got);
+                System.err.println("expected:");
+                System.err.println(expected);
+            }
+            return result;
+        };
+    }
 
     HandlerTester(ModelsEvaluator models) {
         this.handler = new ModelsEvaluationHandler(models, Executors.newSingleThreadExecutor());
     }
 
     void assertResponse(String url, int expectedCode) {
-        assertResponse(url, Collections.emptyMap(), expectedCode, (String)null);
+        checkResponse(url, expectedCode, nop());
     }
 
     void assertResponse(String url, int expectedCode, String expectedResult) {
-        assertResponse(url, Collections.emptyMap(), expectedCode, expectedResult);
+        assertResponse(url, Map.of(), expectedCode, expectedResult);
+    }
+
+    void checkResponse(String url, int expectedCode, Predicate<String> check) {
+        checkResponse(url, Map.of(), expectedCode, check, Map.of());
     }
 
     void assertResponse(String url, int expectedCode, String expectedResult, Map<String, String> headers) {
-        assertResponse(url, Collections.emptyMap(), expectedCode, expectedResult, headers);
+        assertResponse(url, Map.of(), expectedCode, expectedResult, headers);
     }
 
     void assertResponse(String url, Map<String, String> properties, int expectedCode, String expectedResult) {
-        assertResponse(url, properties, expectedCode, expectedResult, Collections.emptyMap());
+        assertResponse(url, properties, expectedCode, expectedResult, Map.of());
     }
 
     void assertResponse(String url, Map<String, String> properties, int expectedCode, String expectedResult, Map<String, String> headers) {
+        checkResponse(url, properties, expectedCode, matchJsonString(expectedResult), headers);
+    }
+
+    void assertStringResponse(String url, Map<String, String> properties, int expectedCode, String expectedResult, Map<String, String> headers) {
+        checkResponse(url, properties, expectedCode, matchString(expectedResult), headers);
+    }
+
+    void checkResponse(String url, Map<String, String> properties, int expectedCode, Predicate<String> check, Map<String, String> headers) {
         HttpRequest getRequest = HttpRequest.createTestRequest(url, com.yahoo.jdisc.http.HttpRequest.Method.GET, null, properties);
         HttpRequest postRequest = HttpRequest.createTestRequest(url, com.yahoo.jdisc.http.HttpRequest.Method.POST, null, properties);
         if (headers.size() > 0) {
             headers.forEach((k,v) -> getRequest.getJDiscRequest().headers().add(k, v));
             headers.forEach((k,v) -> postRequest.getJDiscRequest().headers().add(k, v));
         }
-        assertResponse(getRequest, expectedCode, expectedResult);
-        assertResponse(postRequest, expectedCode, expectedResult);
+        checkResponse(getRequest, expectedCode, check);
+        checkResponse(postRequest, expectedCode, check);
     }
 
     void assertResponse(String url, Map<String, String> properties, int expectedCode, Tensor expectedResult) {
@@ -56,13 +103,11 @@ class HandlerTester {
         assertResponse(getRequest, expectedCode, expectedResult);
     }
 
-    void assertResponse(HttpRequest request, int expectedCode, String expectedResult) {
+    void checkResponse(HttpRequest request, int expectedCode, Predicate<String> check) {
         HttpResponse response = handler.handle(request);
         assertEquals("application/json", response.getContentType());
+        assertEquals(true, check.test(getContents(response)));
         assertEquals(expectedCode, response.getStatus());
-        if (expectedResult != null) {
-            assertEquals(expectedResult, getContents(response));
-        }
     }
 
     void assertResponse(HttpRequest request, int expectedCode, Tensor expectedResult) {
