@@ -3,19 +3,19 @@ package com.yahoo.vespa.hosted.provision.testutils;
 
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.ApplicationId;
-import com.yahoo.config.provision.Cloud;
 import com.yahoo.config.provision.CloudAccount;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.Flavor;
 import com.yahoo.config.provision.HostEvent;
+import com.yahoo.config.provision.HostName;
 import com.yahoo.config.provision.NodeAllocationException;
 import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.vespa.hosted.provision.Node;
-import com.yahoo.vespa.hosted.provision.node.Address;
 import com.yahoo.vespa.hosted.provision.node.Agent;
 import com.yahoo.vespa.hosted.provision.node.IP;
 import com.yahoo.vespa.hosted.provision.provisioning.FatalProvisioningException;
+import com.yahoo.vespa.hosted.provision.provisioning.HostIpConfig;
 import com.yahoo.vespa.hosted.provision.provisioning.HostProvisioner;
 import com.yahoo.vespa.hosted.provision.provisioning.ProvisionedHost;
 
@@ -23,12 +23,13 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -46,21 +47,19 @@ public class MockHostProvisioner implements HostProvisioner {
     private int deprovisionedHosts = 0;
     private EnumSet<Behaviour> behaviours = EnumSet.noneOf(Behaviour.class);
     private Optional<Flavor> hostFlavor = Optional.empty();
-    private Cloud cloud;
 
-    public MockHostProvisioner(List<Flavor> flavors, MockNameResolver nameResolver, int memoryTaxGb, Cloud cloud) {
+    public MockHostProvisioner(List<Flavor> flavors, MockNameResolver nameResolver, int memoryTaxGb) {
         this.flavors = List.copyOf(flavors);
         this.nameResolver = nameResolver;
         this.memoryTaxGb = memoryTaxGb;
-        this.cloud = cloud;
     }
 
-    public MockHostProvisioner(List<Flavor> flavors, Cloud cloud) {
-        this(flavors, 0, cloud);
+    public MockHostProvisioner(List<Flavor> flavors) {
+        this(flavors, 0);
     }
 
-    public MockHostProvisioner(List<Flavor> flavors, int memoryTaxGb, Cloud cloud) {
-        this(flavors, new MockNameResolver().mockAnyLookup(), memoryTaxGb, cloud);
+    public MockHostProvisioner(List<Flavor> flavors, int memoryTaxGb) {
+        this(flavors, new MockNameResolver().mockAnyLookup(), memoryTaxGb);
     }
 
     @Override
@@ -68,10 +67,9 @@ public class MockHostProvisioner implements HostProvisioner {
                                ApplicationId applicationId, Version osVersion, HostSharing sharing,
                                Optional<ClusterSpec.Type> clusterType, CloudAccount cloudAccount,
                                Consumer<List<ProvisionedHost>> provisionedHostsConsumer) {
-        boolean exclusive = sharing == HostSharing.exclusive || ! cloud.allowHostSharing();
         Flavor hostFlavor = this.hostFlavor.orElseGet(() -> flavors.stream()
-                                                                   .filter(f -> exclusive ? compatible(f, resources)
-                                                                                          : f.resources().satisfies(resources))
+                                                                   .filter(f -> sharing == HostSharing.exclusive ? compatible(f, resources)
+                                                                                                                 : f.resources().satisfies(resources))
                                                                    .findFirst()
                                                                    .orElseThrow(() -> new NodeAllocationException("No host flavor matches " + resources, true)));
         List<ProvisionedHost> hosts = new ArrayList<>();
@@ -83,7 +81,7 @@ public class MockHostProvisioner implements HostProvisioner {
                                           hostType,
                                           sharing == HostSharing.exclusive ? Optional.of(applicationId) : Optional.empty(),
                                           Optional.empty(),
-                                          createAddressesForHost(hostType, hostFlavor, index),
+                                          createHostnames(hostType, hostFlavor, index),
                                           resources,
                                           osVersion,
                                           cloudAccount));
@@ -93,16 +91,16 @@ public class MockHostProvisioner implements HostProvisioner {
     }
 
     @Override
-    public List<Node> provision(Node host, Set<Node> children) throws FatalProvisioningException {
+    public HostIpConfig provision(Node host, Set<Node> children) throws FatalProvisioningException {
         if (behaviours.contains(Behaviour.failProvisioning)) throw new FatalProvisioningException("Failed to provision node(s)");
         if (host.state() != Node.State.provisioned) throw new IllegalStateException("Host to provision must be in " + Node.State.provisioned);
-        List<Node> result = new ArrayList<>();
-        result.add(withIpAssigned(host));
+        Map<String, IP.Config> result = new HashMap<>();
+        result.put(host.hostname(), createIpConfig(host));
         for (var child : children) {
             if (child.state() != Node.State.reserved) throw new IllegalStateException("Child to provisioned must be in " + Node.State.reserved);
-            result.add(withIpAssigned(child));
+            result.put(child.hostname(), createIpConfig(child));
         }
-        return result;
+        return new HostIpConfig(result);
     }
 
     @Override
@@ -178,21 +176,21 @@ public class MockHostProvisioner implements HostProvisioner {
         return flavor.resources().compatibleWith(resourcesToVerify);
     }
 
-    private List<Address> createAddressesForHost(NodeType hostType, Flavor flavor, int hostIndex) {
+    private List<HostName> createHostnames(NodeType hostType, Flavor flavor, int hostIndex) {
         long numAddresses = Math.max(2, Math.round(flavor.resources().bandwidthGbps()));
         return IntStream.range(1, (int) numAddresses)
                         .mapToObj(i -> {
                             String hostname = hostType == NodeType.host
                                     ? "host" + hostIndex + "-" + i
                                     : hostType.childNodeType().name() + i;
-                            return new Address(hostname);
+                            return HostName.of(hostname);
                         })
-                        .collect(Collectors.toList());
+                        .toList();
     }
 
-    private Node withIpAssigned(Node node) {
+    public IP.Config createIpConfig(Node node) {
         if (!node.type().isHost()) {
-            return node.with(node.ipConfig().withPrimary(nameResolver.resolveAll(node.hostname())));
+            return node.ipConfig().withPrimary(nameResolver.resolveAll(node.hostname()));
         }
         int hostIndex = Integer.parseInt(node.hostname().replaceAll("^[a-z]+|-\\d+$", ""));
         Set<String> addresses = Set.of("::" + hostIndex + ":0");
@@ -206,7 +204,7 @@ public class MockHostProvisioner implements HostProvisioner {
             }
         }
         IP.Pool pool = node.ipConfig().pool().withIpAddresses(ipAddressPool);
-        return node.with(node.ipConfig().withPrimary(addresses).withPool(pool));
+        return node.ipConfig().withPrimary(addresses).withPool(pool);
     }
 
     public enum Behaviour {
